Fix Fav button on mobile and fix footer links
Fix Fav button on mobile and fix footer links

--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@ footer * {
 
   .footer-content .nav-links {
     justify-content: flex-start;
+    gap: 15px;
   }
   .footer-content {
     display: block;
